lang/lc/tests/err_redef_formal.sys
//-------------------------------------------------------------------
// errdupformal.sys --  Check compiler complains about duplicate formals.
//-------------------------------------------------------------------

system circuit(int a, bool a)
{
    a = b;
}

